fix logs and align listings of thumbnails

--- a/visiondataset/base/static/css/app.css
+++ b/visiondataset/base/static/css/app.css
@@ -47,3 +47,6 @@ h4
     position: relative;
     padding: 10px;
 }
+.datum-image {
+    min-height: 140px;
+}
